# projeto_lista_tarefas

./: CMakeLists.txt  funcoes.c  funcoes.h  main.c
